src/objects/nCandidate__c.object
<CustomObject>
    <description>aaaad</description>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <label>Current Employer</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Mail__c</fullName>
        <label>E Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>ug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>diplama</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F_Name__c</fullName>
        <label>F Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L_Name__c</fullName>
        <label>L Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>doj__c</fullName>
        <label>doj</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>exp__c</fullName>
        <formula>(TODAY()  -  doj__c)/365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>exp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>states__c</fullName>
        <label>state</label>
        <picklist>
            <picklistValues>
                <fullName>Ap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tml</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usa1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usa2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usa3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usa4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jp1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jp2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jp3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jp4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ch1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ch2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ch3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ch4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ln1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ln2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ln3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ln4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>nCandidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>c-{000}</displayFormat>
        <label>nCandidate id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>nCandidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DojRule</fullName>
        <active>true</active>
        <description>you can not enter future date as doj</description>
        <errorConditionFormula>doj__c  &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>doj__c</errorDisplayField>
        <errorMessage>you can not enter future date as doj</errorMessage>
    </validationRules>
</CustomObject>